--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -21,8 +21,8 @@
 
       <div class="container header__container">
         <nav class="site-nav">
-          <a href="./index.html" class="site-nav__logo"
-            >Web<span class="site-nav__span">Studio</span>
+          <a href="./index.html" class="logo"
+            >Web<span class="logo--header">Studio</span>
           </a>
           <ul class="site-nav__list">
             <li class="site-nav__item">
@@ -41,7 +41,7 @@
           </ul>
         </nav>
 
-        <ul class="contact__list">
+        <ul class="contact contact__list">
           <li class="contact__item">
             <a href="mailto:info@devstudio.com" class="contact__link"
               ><svg class="contact__icon" width="16" height="12">
@@ -484,8 +484,8 @@
       <!--address-->
       <div class="container footer__container">
         <div class="footer__group">
-          <a href="./index.html" class="footer__logo"
-            >Web<span class="footer__logo--span">Studio</span>
+          <a href="./index.html" class="logo logo--margin"
+            >Web<span class="logo--footer">Studio</span>
           </a>
           <address class="footer__address">
             <ul class="footer__list">
@@ -547,7 +547,7 @@
         </div>
 
         <!--email form-->
-        <div class="footer__form">
+        <div class="email">
           <h2 class="email__title">Подпишитесь на рассылку</h2>
           <form class="email__form">
             <label class="email__label">
@@ -558,7 +558,7 @@
                 class="email__input"
               />
             </label>
-            <button type="submit" class="footer__btn">
+            <button type="submit" class="email__btn">
               Подписаться
               <svg class="email__icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-send"></use>
